Fixed alignment for radio buttons

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -233,7 +233,7 @@ body {
 }
 
 /* Fixes line-height issue where labels don't line up caused by ngDialog */
-.checkbox label {
+.checkbox label, .radio label {
   line-height: 1em;
 }
 
